src/objects/QB_Pay_Invoice_Header__c.object
<CustomObject>
    <description>Payable Invoice Header - Data is created upon upload to QB Bill Header Details Extract</description>
    <fields>
        <fullName>IR2_Vendor_Invoice_Num__c</fullName>
        <formula>BlankValue(Ref_Number__c, TrxID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Vendor Invoice Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Vendor__c</fullName>
        <formula>If (Left(Vendor__c,6) = &apos;CSTMR*&apos;,
Right(Vendor__c,LEN(Vendor__c)-9),
If (Left(Vendor__c,5) = &apos;CSTMR&apos;,
Right(Vendor__c,LEN(Vendor__c)-8),
If (Left(Vendor__c,3) = &apos;EMP&apos;,
Right(Vendor__c,LEN(Vendor__c)-4),
Vendor__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLines__c</fullName>
        <description>Number of Lines on Invoice</description>
        <label>NumberofLines</label>
        <summaryForeignKey>QB_Bill_Header_Details_Extract__c.QB_Invoice_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Number__c</fullName>
        <label>Ref Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrnDate__c</fullName>
        <label>TrnDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrxID__c</fullName>
        <label>TrxID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QB Payable Invoice Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>NumberofLines__c</columns>
        <columns>Vendor__c</columns>
        <columns>Ref_Number__c</columns>
        <columns>TrnDate__c</columns>
        <columns>TrxID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unprocessed_Payable_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Ref_Number__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>TrnDate__c</columns>
        <columns>TrxID__c</columns>
        <columns>Vendor__c</columns>
        <columns>IR2_Vendor__c</columns>
        <columns>IR2_Vendor_Invoice_Num__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unprocessed Payable Invoices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IH-{000000000}</displayFormat>
        <label>QB Invoice Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Payable Invoice Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>